--- a/public_html/manifest.json
+++ b/public_html/manifest.json
@@ -11,5 +11,5 @@
     "background_color": "#FFFFFF",
     "theme_color": "#66bf13",
     "display": "standalone",
-    "start_url": "index.html/?utm_source=homescreen"
+    "start_url": "/public_html/index.html/?utm_source=homescreen"
 }
