--- a/public_html/manifest.json
+++ b/public_html/manifest.json
@@ -6,6 +6,11 @@
             "src": "images/icon256x256.png",
             "sizes": "256x256",
             "type": "image/png"
+        },
+        {
+            "src": "images/icon1024x1024.png",
+            "sizes": "1024x1024",
+            "type": "image/png"
         }
     ],
     "background_color": "#FFFFFF",
